--- a/index2.html
+++ b/index2.html
@@ -63,7 +63,7 @@
 
 	<center><h1><div id="navcontainer" style="width:7%; text-align: center;">
 	<ul>
-<li><a href="https://orange-object.github.io/Ballet/index22.html">2001</a></li>
+<li><a href="https://chey-s.github.io/-Ballet/index23.html">2001</a></li>
 		</ul>
 		</div></h1></center>
 
