--- a/index13.html
+++ b/index13.html
@@ -108,7 +108,7 @@ function myFunction() {
 </div>
 	</div>
 		
-	<div style="margin-top: 5%"><div class="dropdown">
+	<div style="margin-top: 5%; align: left;"><div class="dropdown">
   <button class="dropbtn">Salsa</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -208,7 +208,7 @@ function myFunction() {
 </div>
 	</div>
 	
-		<div style="margin-top: 5%"><div class="dropdown">
+		<div style="margin-top: 5%; align:left;"><div class="dropdown">
   <button class="dropbtn">Salsa</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
