--- a/index13.html
+++ b/index13.html
@@ -73,35 +73,35 @@ function myFunction() {
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Folk Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Swing</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Samba</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Cha-Cha-Cha</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Tap Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -109,49 +109,49 @@ function myFunction() {
 	</div>
 		
 	<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Jive</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Line Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">East Coast Swing</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Capoeria</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Quickstep</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Charleston</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Break Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -160,27 +160,27 @@ function myFunction() {
 	</div>
 	
 	<div style="margin-top: 5%"><div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Modern Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Contemporary Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Concert Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">House Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -188,21 +188,21 @@ function myFunction() {
 	
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Locking</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Electric Boogalo</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Popping</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -210,42 +210,42 @@ function myFunction() {
 	</div>
 	
 		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Latin Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 			
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Hip-hop Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Jazz Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Flamenco</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Bolero</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Ballet</button>
+  <button class="dropbtn">Vinennese</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
