--- a/index13.html
+++ b/index13.html
@@ -73,35 +73,35 @@ function myFunction() {
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Folk Dance</button>
+  <button class="dropbtn">Bolero</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Swing</button>
+  <button class="dropbtn">Break Dancing</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Salsa</button>
+  <button class="dropbtn">Capoeria</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Samba</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	
-	<div class="dropdown">
   <button class="dropbtn">Cha-Cha-Cha</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
+	<div class="dropdown">
+  <button class="dropbtn">Charleston</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -109,69 +109,12 @@ function myFunction() {
 	</div>
 		
 	<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
-  <button class="dropbtn">Tap Dance</button>
+  <button class="dropbtn">Concert Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
-	<div class="dropdown">
-  <button class="dropbtn">Jive</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	
-		<div class="dropdown">
-  <button class="dropbtn">Line Dance</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	
-	<div class="dropdown">
-  <button class="dropbtn">East Coast Swing</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	
-		<div class="dropdown">
-  <button class="dropbtn">Capoeria</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	
-	<div class="dropdown">
-  <button class="dropbtn">Quickstep</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	
-		<div class="dropdown">
-  <button class="dropbtn">Charleston</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	</div>
-	</div>
-	
-	<div style="margin-top: 5%"><div class="dropdown">
-  <button class="dropbtn">Break Dance</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
-	
-		<div class="dropdown">
-  <button class="dropbtn">Modern Dance</button>
-  <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
-  </div>
-</div>
 	<div class="dropdown">
   <button class="dropbtn">Contemporary Dance</button>
   <div class="dropdown-content">
@@ -180,7 +123,64 @@ function myFunction() {
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Concert Dance</button>
+  <button class="dropbtn">East Coast Swing</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
+	<div class="dropdown">
+  <button class="dropbtn">Electric Boogalo</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
+		<div class="dropdown">
+  <button class="dropbtn">Flamenco</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
+	<div class="dropdown">
+  <button class="dropbtn">Folk Dance</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
+		<div class="dropdown">
+  <button class="dropbtn">Hip-hop Dance</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	</div>
+	</div>
+	
+	<div style="margin-top: 5%"><div class="dropdown">
+  <button class="dropbtn">House Dance</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
+		<div class="dropdown">
+  <button class="dropbtn">Jazz Dance</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	<div class="dropdown">
+  <button class="dropbtn">Jive Dance</button>
+  <div class="dropdown-content">
+    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+  </div>
+</div>
+	
+		<div class="dropdown">
+  <button class="dropbtn">Latin Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -188,7 +188,7 @@ function myFunction() {
 	
 	
 	<div class="dropdown">
-  <button class="dropbtn">House Dance</button>
+  <button class="dropbtn">Line Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -202,7 +202,7 @@ function myFunction() {
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Electric Boogalo</button>
+  <button class="dropbtn">Modern Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
@@ -217,35 +217,35 @@ function myFunction() {
 </div>
 			
 	<div class="dropdown">
-  <button class="dropbtn">Latin Dance</button>
+  <button class="dropbtn">Quickstep</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Hip-hop Dance</button>
+  <button class="dropbtn">Salsa</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Jazz Dance</button>
+  <button class="dropbtn">Samba</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 		<div class="dropdown">
-  <button class="dropbtn">Flamenco</button>
+  <button class="dropbtn">Swing</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
 	
 	<div class="dropdown">
-  <button class="dropbtn">Bolero</button>
+  <button class="dropbtn">Tap Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
