--- a/index13.html
+++ b/index13.html
@@ -87,7 +87,7 @@ function myFunction() {
 </div>
 	</div>
 	
-	<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Capoeria</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -123,7 +123,7 @@ function myFunction() {
 </div>
 		</div>
 		
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">East Coast Swing</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -138,7 +138,7 @@ function myFunction() {
 </div>
 			</div>
 	
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Flamenco</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -153,7 +153,7 @@ function myFunction() {
 </div>
 			</div>
 			
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Hip-hop Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -168,7 +168,7 @@ function myFunction() {
 </div>
 			</div>
 	
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Jazz Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -182,7 +182,7 @@ function myFunction() {
 </div>
 			</div>
 	
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Latin Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -205,7 +205,7 @@ function myFunction() {
 </div>
 			</div>
 	
-	<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Modern Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -213,7 +213,7 @@ function myFunction() {
 </div>
 	</div>
 	
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Popping</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -221,7 +221,7 @@ function myFunction() {
 </div>
 			</div>
 			
-	<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Quickstep</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -229,7 +229,7 @@ function myFunction() {
 </div>
 		</div>
 	
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Salsa</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -251,7 +251,7 @@ function myFunction() {
 </div>
 			</div>
 	
-	<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Tap Dance</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
@@ -259,7 +259,7 @@ function myFunction() {
 </div>
 		</div>
 	
-		<div align= "right"><div style="margin-top: 5%;"><div class="dropdown">
+		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Vinennese</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
