--- a/index13.html
+++ b/index13.html
@@ -57,12 +57,13 @@ function myFunction() {
        
     <center><h1><font size="50"px>Styles of Dance</font></h1></center>
 	
-	<div style="margin-top: 5%"><div class="dropdown">
+	<div align= "center"><div style="margin-top: 5%"><div class="dropdown">
   <button class="dropbtn">Ballet</button>
   <div class="dropdown-content">
     Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
   </div>
 </div>
+		</div>
 	
 	
 		<div class="dropdown">
