--- a/index13.html
+++ b/index13.html
@@ -67,7 +67,7 @@ function myFunction() {
 		<div class="dropdown">
   <button class="dropbtn">Belly Dance</button>
   <div class="dropdown-content">
-    an artistic dance form performed to music using precise and highly formalized set steps and gestures. Classical ballet, which originated in Renaissance Italy and established its present form during the 19th century, is characterized by light, graceful, fluid movements and the use of pointe shoes.
+    a dance originating in the Middle East, typically performed by a woman and involving undulating movements of the belly and rapid gyration of the hips.
   </div>
 </div>
 	
