--- a/index13.html
+++ b/index13.html
@@ -81,7 +81,7 @@ function myFunction() {
 		<div class="dropdown">
   <button class="dropbtn">Break Dancing</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+   separate or cause to separate into pieces as a result of a blow, shock, or strain.
   </div>
 </div>
 	</div>
