--- a/index13.html
+++ b/index13.html
@@ -89,7 +89,7 @@ function myFunction() {
 	<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Capoeria</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    a system of physical discipline and movement originating among Brazilian slaves, treated as a martial art and dance form.
   </div>
 </div>
 	
