--- a/index13.html
+++ b/index13.html
@@ -96,7 +96,7 @@ function myFunction() {
 		<div class="dropdown">
   <button class="dropbtn">Cha-Cha-Cha</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    The cha-cha-chá, or simply cha-cha in the U.S., is a dance of Cuban origin. It is danced to the music of the same name introduced by Cuban composer and violinist Enrique Jorrin in the early 1950s. This rhythm was developed from the danzón-mambo.
   </div>
 </div>
 	
