--- a/index13.html
+++ b/index13.html
@@ -103,7 +103,7 @@ function myFunction() {
 	<div class="dropdown">
   <button class="dropbtn">Charleston</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+   The rhythm was popularized in mainstream dance music in the United States by a 1923 tune called "The Charleston" by composer/pianist James P. Johnson which originated in the Broadway show Runnin' Wild and became one of the most popular hits of the decade.
   </div>
 </div>
 		
