--- a/index13.html
+++ b/index13.html
@@ -110,7 +110,7 @@ function myFunction() {
 	<div class="dropdown">
   <button class="dropbtn">Concert Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Concert dance (also known as performance dance or theatre dance in the United Kingdom) is dance performed for an audience. It is frequently performed in a theatre setting, though this is not a requirement, and it is usually choreographed and performed to set music.
   </div>
 </div>
 	
