--- a/index13.html
+++ b/index13.html
@@ -117,7 +117,8 @@ function myFunction() {
 	<div class="dropdown">
   <button class="dropbtn">Contemporary Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Image result for contemporary dance definitionen.wikipedia.org
+Contemporary dance is a style of expressive dance that combines elements of several dance genres including modern, jazz, lyrical and classical ballet. Contemporary dancers strive to connect the mind and the body through fluid dance movements.
   </div>
 </div>
 		</div>
