--- a/index13.html
+++ b/index13.html
@@ -126,7 +126,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">East Coast Swing</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    East Coast Swing (ECS) is a form of social partner dance. It belongs to the group of swing dances. It is danced under fast swing music, including rock and roll and boogie-woogie. Yerrington and Outland equated East Coast Swing to the New Yorker in 1961.
   </div>
 </div>
 	
