--- a/index13.html
+++ b/index13.html
@@ -133,7 +133,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div class="dropdown">
   <button class="dropbtn">Electric Boogalo</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Electric boogaloo (sometimes mistakenly referred to as electric boogie) is a funk-style of hip hop dance closely related to popping. It became the signature style of the dance group started in the 1970s, the Electric Boogaloos.
   </div>
 </div>
 			</div>
