--- a/index13.html
+++ b/index13.html
@@ -141,7 +141,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Flamenco</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    a style of Spanish music, played especially on the guitar and accompanied by singing and dancing.
   </div>
 </div>
 	
