--- a/index13.html
+++ b/index13.html
@@ -148,7 +148,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div class="dropdown">
   <button class="dropbtn">Folk Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    a popular dance, considered as part of the tradition or custom of a particular people.
   </div>
 </div>
 			</div>
