--- a/index13.html
+++ b/index13.html
@@ -156,7 +156,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Hip-hop Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    a style of popular music of US black and Hispanic origin, featuring rap with an electronic backing.
   </div>
 </div>
 	
