--- a/index13.html
+++ b/index13.html
@@ -163,7 +163,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div style="margin-top: 5%"><div class="dropdown">
   <button class="dropbtn">House Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    House dance is a social dance primarily danced to house music that has roots in the clubs of Chicago and of New York. The main elements of House dance include "Footwork", "Jacking", and "Lofting".
   </div>
 </div>
 			</div>
