--- a/index13.html
+++ b/index13.html
@@ -160,13 +160,12 @@ Contemporary dance is a style of expressive dance that combines elements of seve
   </div>
 </div>
 	
-	<div style="margin-top: 5%"><div class="dropdown">
+	<div class="dropdown">
   <button class="dropbtn">House Dance</button>
   <div class="dropdown-content">
     House dance is a social dance primarily danced to house music that has roots in the clubs of Chicago and of New York. The main elements of House dance include "Footwork", "Jacking", and "Lofting".
   </div>
 </div>
-			</div>
 	
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Jazz Dance</button>
