--- a/index13.html
+++ b/index13.html
@@ -176,7 +176,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div class="dropdown">
   <button class="dropbtn">Jive Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    In ballroom dancing, the jive is a dance style that originated in the United States from African-Americans in the early 1930s. It was popularized in 1934 by Cab Calloway. It is a lively and uninhibited variation of the Jitterbug, a form of Swing dance.
   </div>
 </div>
 			</div>
