--- a/index13.html
+++ b/index13.html
@@ -184,7 +184,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div align= "center"><div style="margin-top: 5%;"><div class="dropdown">
   <button class="dropbtn">Latin Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    It refers to types of ballroom dance and folk dance that (with few exceptions) originated in Latin America. The category of Latin dances in the international dancesport competitions consists of the cha-cha-cha, rumba, samba, paso doble, and also the jive of United States origin.
   </div>
 </div>
 	
