--- a/index13.html
+++ b/index13.html
@@ -192,7 +192,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 	<div class="dropdown">
   <button class="dropbtn">Line Dance</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    a type of country and western dancing in which dancers line up in a row without partners and follow a choreographed pattern of steps to music.
   </div>
 </div>
 	
