--- a/index13.html
+++ b/index13.html
@@ -199,7 +199,7 @@ Contemporary dance is a style of expressive dance that combines elements of seve
 		<div class="dropdown">
   <button class="dropbtn">Locking</button>
   <div class="dropdown-content">
-    Salsa is a popular form of social dance that originated in the Caribbean. The movements of salsa have origins in Cuban Son, cha-cha-cha, mambo and Puerto Rican bomba and plena and other dance forms. The dance, along with the salsa music, originated in the mid-1970s in New York.
+    Locking is a style of funk dance, which is today also associated with hip hop. The name is based on the concept of locking movements, which basically means freezing from a fast movement and "locking" in a certain position, holding that position for a short while and then continuing in the same speed as before.
   </div>
 </div>
 			</div>
